--- a/final team 4 predict.ipynb
+++ b/final team 4 predict.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -711,7 +711,7 @@
     "    \n",
     "    \"\"\"\n",
     "\n",
-    "def extract_municipality_hashtags(df):\n",
+    "\n",
     "    \n",
     "    municipality_dict = { '@CityofCTAlerts' : 'Cape Town',\n",
     "                '@CityPowerJhb' : 'Johannesburg',\n",
@@ -735,152 +735,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tweets</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>municipality</th>\n",
-       "      <th>hashtags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>@BongaDlulane Please send an email to mediades...</td>\n",
-       "      <td>2019-11-29 12:50:54</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>@saucy_mamiie Pls log a call on 0860037566</td>\n",
-       "      <td>2019-11-29 12:46:53</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>@BongaDlulane Query escalated to media desk.</td>\n",
-       "      <td>2019-11-29 12:46:10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Before leaving the office this afternoon, head...</td>\n",
-       "      <td>2019-11-29 12:33:36</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>#ESKOMFREESTATE #MEDIASTATEMENT : ESKOM SUSPEN...</td>\n",
-       "      <td>2019-11-29 12:17:43</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[#eskomfreestate, #mediastatement]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>195</td>\n",
-       "      <td>Eskom's Visitors Centres’ facilities include i...</td>\n",
-       "      <td>2019-11-20 10:29:07</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>196</td>\n",
-       "      <td>#Eskom connected 400 houses and in the process...</td>\n",
-       "      <td>2019-11-20 10:25:20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[#eskom, #eskom, #poweringyourworld]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>197</td>\n",
-       "      <td>@ArthurGodbeer Is the power restored as yet?</td>\n",
-       "      <td>2019-11-20 10:07:59</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>198</td>\n",
-       "      <td>@MuthambiPaulina @SABCNewsOnline @IOL @eNCA @e...</td>\n",
-       "      <td>2019-11-20 10:07:41</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>199</td>\n",
-       "      <td>RT @GP_DHS: The @GautengProvince made a commit...</td>\n",
-       "      <td>2019-11-20 10:00:09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>200 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                Tweets                 Date  \\\n",
-       "0    @BongaDlulane Please send an email to mediades...  2019-11-29 12:50:54   \n",
-       "1           @saucy_mamiie Pls log a call on 0860037566  2019-11-29 12:46:53   \n",
-       "2         @BongaDlulane Query escalated to media desk.  2019-11-29 12:46:10   \n",
-       "3    Before leaving the office this afternoon, head...  2019-11-29 12:33:36   \n",
-       "4    #ESKOMFREESTATE #MEDIASTATEMENT : ESKOM SUSPEN...  2019-11-29 12:17:43   \n",
-       "..                                                 ...                  ...   \n",
-       "195  Eskom's Visitors Centres’ facilities include i...  2019-11-20 10:29:07   \n",
-       "196  #Eskom connected 400 houses and in the process...  2019-11-20 10:25:20   \n",
-       "197       @ArthurGodbeer Is the power restored as yet?  2019-11-20 10:07:59   \n",
-       "198  @MuthambiPaulina @SABCNewsOnline @IOL @eNCA @e...  2019-11-20 10:07:41   \n",
-       "199  RT @GP_DHS: The @GautengProvince made a commit...  2019-11-20 10:00:09   \n",
-       "\n",
-       "    municipality                              hashtags  \n",
-       "0            NaN                                   NaN  \n",
-       "1            NaN                                   NaN  \n",
-       "2            NaN                                   NaN  \n",
-       "3            NaN                                   NaN  \n",
-       "4            NaN    [#eskomfreestate, #mediastatement]  \n",
-       "..           ...                                   ...  \n",
-       "195          NaN                                   NaN  \n",
-       "196          NaN  [#eskom, #eskom, #poweringyourworld]  \n",
-       "197          NaN                                   NaN  \n",
-       "198          NaN                                   NaN  \n",
-       "199          NaN                                   NaN  \n",
-       "\n",
-       "[200 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'twitter_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-ebd124f76990>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mextract_municipality_hashtags\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtwitter_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'twitter_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1523,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1543,7 +1410,7 @@
     "        df(DataFrame): Returns a DataFrame with an added column of a list of tweets with the stop words removed\n",
     "    \n",
     "    \"\"\"\n",
-    "def stop_words_remover(df):\n",
+    "\n",
     "    \n",
     "    df['Without Stop Words'] = df['Tweets'].apply(str.split)\n",
     "    for i in range(len(df)):\n",
